--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                   <div class="titlepage">
                      <h2> <img src="images/head.h.png" alt="#"/> About Our Parlour</h2>
                      <p align="justify">Our Ranjani beauty parlour is a sanctuary of self-care, where relaxation meets transformation. From rejuvenating facials to skillful hairstyling, each service is tailored to enhance natural beauty. Expert beauticians create a welcoming atmosphere, empowering clients to embrace their uniqueness while fostering confidence and well-being, making every visit a delightful experience. </p>
-                     <button class="btn-lg btn-outline-light btn"  data-toggle="modal" data-target=".bd-example-modal-lg">View Gallery</button>
+                     <button class="btn-lg btn-outline-light btn" data-toggle="modal" data-target="#exampleModal">View Gallery</button>
                   </div>
                </div>
             </div>
@@ -397,7 +397,7 @@
 
 
 
-      <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+      <!-- <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
          <div class="modal-dialog modal-lg">
            <div class="modal-content p-3">
             <div class="row gt-3">
@@ -428,7 +428,51 @@
             </div>
            </div>
          </div>
+       </div> -->
+
+
+
+       <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+   <div class="modal-dialog" role="document">
+     <div class="modal-content">
+       <div class="modal-header">
+         
+         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+           <span aria-hidden="true">&times;</span>
+         </button>
        </div>
+       <div class="modal-body">
+         <div class="row gt-3">
+            <div class="col-md-4">
+               <img src="images/r1.jpg" alt="">
+            </div>
+            <div class="col-md-4">
+               <img src="images/r2.jpg" alt="">
+            </div>
+            <div class="col-md-4">
+               <img src="images/r3.jpg" alt="">
+            </div>
+            <div class="col-md-6 my-3">
+               <img src="images/r7.JPG" alt="">
+            </div>
+            <div class="col-md-6 my-3">
+               <img src="images/r8.JPG" alt="">
+            </div>
+            <div class="col-md-3 my-3">
+               <img src="images/r12.jpg" alt="">
+            </div>
+            <div class="col-md-6 my-3">
+               <img src="images/r9.JPG" alt="">
+            </div>
+            <div class="col-md-3 my-3">
+               <img src="images/r13.jpg" alt="">
+            </div>
+         </div>
+       </div>
+     </div>
+   </div>
+ </div>
    </body>
 </html>
 
