--- a/index.html
+++ b/index.html
@@ -444,28 +444,28 @@
        </div>
        <div class="modal-body">
          <div class="row gt-3">
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-12">
                <img src="images/r1.jpg" alt="">
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-12">
                <img src="images/r2.jpg" alt="">
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-12">
                <img src="images/r3.jpg" alt="">
             </div>
-            <div class="col-md-6 my-3">
+            <div class="col-md-6 my-3 col-sm-12">
                <img src="images/r7.JPG" alt="">
             </div>
-            <div class="col-md-6 my-3">
+            <div class="col-md-6 my-3 col-sm-12">
                <img src="images/r8.JPG" alt="">
             </div>
-            <div class="col-md-3 my-3">
+            <div class="col-md-3 my-3 col-sm-12">
                <img src="images/r12.jpg" alt="">
             </div>
-            <div class="col-md-6 my-3">
+            <div class="col-md-6 my-3 col-sm-12">
                <img src="images/r9.JPG" alt="">
             </div>
-            <div class="col-md-3 my-3">
+            <div class="col-md-3 my-3 col-sm-12">
                <img src="images/r13.jpg" alt="">
             </div>
          </div>
